--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 <h3> <span> qualification : </span> Bachelor </h3>
                 <h3> <span> post : </span> student </h3>
                 <h3> <span> language : </span> english </h3>
-                <a href="https://drive.google.com/file/d/1cKOGR2TAh9MjopGwKfCT9rlAMREL9SlC/view?usp=sharing"><button
-                        class="btn"> download CV <i class="fas fa-download"></i> </button></a>
+                <a href="https://drive.google.com/file/d/1cKOGR2TAh9MjopGwKfCT9rlAMREL9SlC/view?usp=sharing"
+                    target=”_blank”><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
 
             </div>
             <div class="counter">
@@ -172,15 +172,18 @@
                 <div class="pro-content">
                     <h1 class="pro-title heading"><span id="first-pro">URL Shortner</span></h1>
                     <p class="pro-info" style="color: #333;">
-                        • A simple web application built with Node.js, Express, and MongoDB for you to readily get a shortened URL to use.
+                        • A simple web application built with Node.js, Express, and MongoDB for you to readily get a
+                        shortened URL to use.
                         <br>
-                        • Link shorteners work by transforming any long URL into a shorter, more readable link. When a user clicks the shortened
+                        • Link shorteners work by transforming any long URL into a shorter, more readable link. When a
+                        user clicks the shortened
                         version, they’re automatically forwarded to the destination URL.
                     </p>
-                        <div class="pro-btn-grp">
-                        <a href="https://github.com/naitikvarshney/URL-Shortner"><button class="pro-btn github btn">github</button></a>
-                         <a href=""><button class="pro-btn live btn">live</button></a>
-                       </div>
+                    <div class="pro-btn-grp">
+                        <a href="https://github.com/naitikvarshney/URL-Shortner" target=”_blank”><button
+                                class="pro-btn github btn">github</button></a>
+                        <a href=""><button class="pro-btn live btn">live</button></a>
+                    </div>
                 </div>
             </div>
 
@@ -191,14 +194,15 @@
                     <p class="pro-info ">
                         • There is a client and a server, which can send messages between them.
                         <br>
-                        • The server defines the IP and the port, and the client needs to specify it in order to talk to the desired server.
+                        • The server defines the IP and the port, and the client needs to specify it in order to talk to
+                        the desired server.
                         <br>
                         • Once connected, they will be able to send messages between them.
                     </p>
-                        <div class="pro-btn-grp">
+                    <div class="pro-btn-grp">
                         <a href=""><button class="pro-btn github btn">github</button></a>
-                         <a href=""><button class="pro-btn live btn">live</button></a>
-                       </div>
+                        <a href=""><button class="pro-btn live btn">live</button></a>
+                    </div>
                 </div>
             </div>
 
@@ -206,16 +210,19 @@
                 <img src="images/img5.jpg" alt="">
                 <div class="pro-content">
                     <h1 class="pro-title heading"><span id="third-pro">Weather application</span></h1>
-                    <p class="pro-info" >
-                        • A simple weather app that allows you to get current weather information, based on the city using the API.
+                    <p class="pro-info">
+                        • A simple weather app that allows you to get current weather information, based on the city
+                        using the API.
                         <br>
 
-                        • It uses the OpenWeather API to fetch the current weather and uses NodeJS to create the server and serve the API.
+                        • It uses the OpenWeather API to fetch the current weather and uses NodeJS to create the server
+                        and serve the API.
                     </p>
-                        <div class="pro-btn-grp">
-                        <a href="https://github.com/naitikvarshney/Weather-App "><button class="pro-btn github btn">github</button></a>
-                         <a href=""><button class="pro-btn live btn">live</button></a>
-                       </div>
+                    <div class="pro-btn-grp">
+                        <a href="https://github.com/naitikvarshney/Weather-App " target=”_blank”><button
+                                class="pro-btn github btn">github</button></a>
+                        <a href=""><button class="pro-btn live btn">live</button></a>
+                    </div>
                 </div>
             </div>
 
@@ -226,14 +233,16 @@
                     <p class="pro-info" style="color: grey; text-transform: none;">
                         • There is a client and a server, which can send messages between them.
                         <br>
-                        • The server defines the IP and the port, and the client needs to specify it in order to talk to the desired server.
+                        • The server defines the IP and the port, and the client needs to specify it in order to talk to
+                        the desired server.
                         <br>
                         • Once connected, they will be able to send messages between them.
                     </p>
-                        <div class="pro-btn-grp">
-                        <a href="https://github.com/naitikvarshney/Chat-App-using-JAVA"><button class="pro-btn github btn">github</button></a>
-                         <a href=""><button class="pro-btn live btn">live</button></a>
-                       </div>
+                    <div class="pro-btn-grp">
+                        <a href="https://github.com/naitikvarshney/Chat-App-using-JAVA" target=”_blank”><button
+                                class="pro-btn github btn">github</button></a>
+                        <a href=""><button class="pro-btn live btn">live</button></a>
+                    </div>
                 </div>
             </div>
 
@@ -261,10 +270,12 @@
                 </div>
 
                 <div class="follow">
-                    <a href="https://www.facebook.com/naitik.varshney.391/" class="fab fa-facebook-f"></a>
-                    <a href="https://twitter.com/naitik_varshney" class="fab fa-twitter"></a>
-                    <a href="https://www.instagram.com/naitik_var/" class="fab fa-instagram"></a>
-                    <a href="https://www.linkedin.com/in/naitik-varshney77/" class="fab fa-linkedin"></a>
+                    <a href="https://www.facebook.com/naitik.varshney.391/ " target=”_blank”
+                        class="fab fa-facebook-f"></a>
+                    <a href="https://twitter.com/naitik_varshney" target=”_blank” class="fab fa-twitter"></a>
+                    <a href="https://www.instagram.com/naitik_var/" target=”_blank” class="fab fa-instagram"></a>
+                    <a href="https://www.linkedin.com/in/naitik-varshney77/" target=”_blank”
+                        class="fab fa-linkedin"></a>
                 </div>
 
             </div>
