--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="box">
                 <img src="images/img3.jpg" alt="">
                 <div class="pro-content">
-                    <h1 class="pro-title heading"><span id="first-pro">URL Shortner</span></h1>
+                    <h1 class="pro-title heading"><span id="first-pro">URL Shortener</span></h1>
                     <p class="pro-info" style="color: #333;">
                         • A simple web application built with Node.js, Express, and MongoDB for you to readily get a
                         shortened URL to use.
