--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section class="home" id="home">
 
         <h3>HI THERE !</h3>
-        <h1>I'M <span>naitik varshney</span></h1>
+        <h1>I'm <span>naitik varshney</span></h1>
         <p>Experienced Teaching Assistant with a demonstrated history of working in the e-learning industry. Skilled in
             Core Java, Java, HTML, Teamwork, and JavaScript. Strong education professional with a Bachelor of Technology
             - BTech focused in Computer Science from Harcourt Butler Technical University .
